Bug 85428 - Imported PDF displays extra-long lines for shaded area
Summary: Imported PDF displays extra-long lines for shaded area
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.3.2.2 release
Hardware: Other All
: medium normal
Assignee: Dave Gilbert
URL:
Whiteboard: target:25.8.0 target:25.2.0.0.beta2 i...
Keywords:
Depends on: 86211
Blocks: PDF-Import-Draw
  Show dependency treegraph
 
Reported: 2014-10-25 06:16 UTC by Robinson Tryon (qubit)
Modified: 2025-01-04 12:45 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing extra-long lines in construction shaded areas (392.86 KB, image/png)
2014-10-25 06:17 UTC, Robinson Tryon (qubit)
Details
Problematic PDF (562.70 KB, application/pdf)
2022-11-18 11:52 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robinson Tryon (qubit) 2014-10-25 06:16:41 UTC
Importing PDF version of UW campus map into Draw results in shaded areas to render lines too long.

Original: https://www.washington.edu/static/media/campus-and-vicinity.pdf

Affected parts of the map are the "Construction Area" regions, both on the map and in the map's legend.

Tested with LO 4.3.2.2 and 4.4.0.0.alpha1 on Ubuntu 14.04.

Map displays correctly in Firefox 33.0 and Evince 3.10.3.
Comment 1 Robinson Tryon (qubit) 2014-10-25 06:17:18 UTC
Created attachment 108381 [details]
Screenshot showing extra-long lines in construction shaded areas
Comment 2 A (Andy) 2014-10-25 06:48:22 UTC
Reproducible with LO 4.3.2.2 (Win 8.1)
Comment 3 QA Administrators 2016-01-17 20:03:38 UTC Comment hidden (obsolete)
Comment 4 Heiko Tietze 2016-05-10 09:33:43 UTC
Confirmed

Version: 5.2.0.0.alpha0+
Build ID: 6b232aeecc55f1715bc111e636e36a8e24827efb
CPU Threads: 4; OS Version: Windows 6.1; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-01-26_07:40:04
Locale: de-DE (de_DE)
Comment 5 QA Administrators 2017-05-22 13:40:56 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2019-12-03 14:24:27 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2021-12-03 04:32:51 UTC Comment hidden (obsolete)
Comment 8 Rajasekaran Karunanithi 2022-11-17 23:28:30 UTC
(In reply to Robinson Tryon (qubit) from comment #0)
> Importing PDF version of UW campus map into Draw results in shaded areas to
> render lines too long.
> 
> Original: https://www.washington.edu/static/media/campus-and-vicinity.pdf
> 
> Affected parts of the map are the "Construction Area" regions, both on the
> map and in the map's legend.
> 
> Tested with LO 4.3.2.2 and 4.4.0.0.alpha1 on Ubuntu 14.04.
> 
> Map displays correctly in Firefox 33.0 and Evince 3.10.3.

Couldn't find the pdf version of UW Campus file right now.Can you send any other samples to test for this bug?
Comment 9 Buovjaga 2022-11-18 11:52:37 UTC
Created attachment 183663 [details]
Problematic PDF
Comment 10 Buovjaga 2022-11-18 11:52:56 UTC
Still confirmed

Arch Linux 64-bit
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 45d1fca81991f0d6837c98d6be6fe0d21d566fa5
CPU threads: 8; OS: Linux 6.0; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 18 November 2022
Comment 11 QA Administrators 2024-11-18 03:15:45 UTC Comment hidden (obsolete)
Comment 12 Dave Gilbert 2024-11-21 02:19:51 UTC
Yeh it still does it on head 9595fc0560, Nov 17 .
I'll look at it, I think it's just we're not clipping non-filled stuff.
Comment 13 Commit Notification 2024-12-05 01:39:54 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/abfbca2719767516d5a35ee641ddd0d96d93e4ea

tdf#85428: Clip strokes

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Buovjaga 2024-12-05 10:30:43 UTC
Now it's beautiful. Feel free to mark as fixed.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 139bb786bb4fe5cf2554f6016095ff1588f3994f
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 5 December 2024
Comment 15 Commit Notification 2024-12-05 21:05:41 UTC
Dr. David Alan Gilbert committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/69c2df07280ef6e73fb37dda0bc4610b35ea1cc7

tdf#85428: Clip strokes

It will be available in 25.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.