tdf#85428: Clip strokes

Clip stroke paths coming from the PDF import.
Similar to my previous patches for fills.

(It's possible we might have to do something clever with cropping
of arrows/etc but not sure yet)

Change-Id: I9e46deac4a722e3ac510f0cc4bdb6b38b67c579e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/176952
Tested-by: Jenkins
Reviewed-by: David Gilbert <freedesktop@treblig.org>
(cherry picked from commit abfbca2719767516d5a35ee641ddd0d96d93e4ea)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/177863